--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
